--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -55,6 +55,14 @@ q{
   background-color: rgb(207, 205, 205);
   border-left: 3px dashed rgb(109, 108, 108);
   padding-left: 30px;
+  padding-right: 30px;
   padding-top: 80px;
   padding-bottom:  80px;
+  border-radius: 25px;
+}
+.villagers{
+    border-left: 3px dashed green;
+}
+.farmer{
+    border-left: 3px dashed yellow;
 }
